force-app/main/default/objects/peer__Investment_Order_Sale_Transaction__c/peer__Investment_Order_Sale_Transaction__c.object-meta.xml
<CustomObject>
    <label>Investment Order Sale Transaction</label>
    <nameField>
        <displayFormat>IST-{00000000}</displayFormat>
        <label>Investment Order Sale Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Order Sale Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>