force-app/main/default/objects/peer__Investment_Order_Sale_Transaction__c/fields/peer__Add_Income_in_Price__c.field-meta.xml
<CustomField>
    <fullName>peer__Add_Income_in_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, investor&apos;s earlier income is added in price.</description>
    <inlineHelpText>If true, investor&apos;s earlier income is added in price.</inlineHelpText>
    <label>Add Income in Price</label>
    <type>Checkbox</type>
</CustomField>