force-app/main/default/objects/peer__Investment_Order_Sale_Transaction__c/fields/peer__Buyer__c.field-meta.xml
<CustomField>
    <fullName>peer__Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investment Order Sale Transactions</relationshipLabel>
    <relationshipName>Investment_Order_Sale_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>