force-app/main/default/objects/peer__Investment_Order_Sale_Transaction__c/fields/peer__Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>peer__Number_of_Shares__c</fullName>
    <description>Number of shares of old IO which are being sold.</description>
    <inlineHelpText>Number of shares of old IO which are being sold.</inlineHelpText>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>