force-app/main/default/objects/peer__Investment_Order_Sale_Transaction__c/fields/peer__Price_per_Share__c.field-meta.xml
<CustomField>
    <fullName>peer__Price_per_Share__c</fullName>
    <label>Price per Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>