force-app/main/default/objects/peer__Investment_Order_Sale_Transaction__c/fields/peer__Transfer_Income__c.field-meta.xml
<CustomField>
    <fullName>peer__Transfer_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, investor&apos;s earlier income is passed on to new investor.</description>
    <inlineHelpText>If true, investor&apos;s earlier income is passed on to new investor.</inlineHelpText>
    <label>Transfer Income</label>
    <type>Checkbox</type>
</CustomField>